--- a/index.html
+++ b/index.html
@@ -10,35 +10,234 @@
 </head>
 
 <body>
+    <header>
+        <a href="#">
+            <h1>The Design Shop</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="#">Weekly Recommendation</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">TDB</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
+    <main>
+        <section>
+            <article class="container">
 
-    <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
-</body>
 
-</html>
+                <!-- 1. Angebot  Start Container-->
+                <div class="angebot">
+                    <a href="https://amzn.to/32MmHgL" target="_blank">
+                        <img src="assets/img/1.png" alt=" Kanken Art Laptop 15'' Special Edition Backpack">
+                    </a>
+                    <h2 class="artikelname">
+                        Kanken Art Laptop 15" Special Edition Backpack</h2>
+                    <div class="preis">$119.00</div>
+                    <div class="hersteller">Fjallraven</div>
+                </div>
+                <!-- 2. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2WX7vtD" target="_blank">
+                        <img src="assets/img/d2.png" alt="Swing Arm Wood Desk Lamp">
+                    </a>
+                    <h2 class="artikelname">
+                        Swing Arm Wood Desk Lamp</h2>
+                    <div class="preis">$36.00</div>
+                    <div class="hersteller">Tomons</div>
+                </div>
+                <!-- 3. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2I3WvXM" target="_blank">
+                        <img src="assets/img/u6.png" alt="Hajo Backpack">
+                    </a>
+                    <h2 class="artikelname">
+                        Hajo Backpack</h2>
+                    <div class="preis">$89.00</div>
+                    <div class="hersteller">Ucon Acrobatics</div>
+                </div>
+                <!-- 4. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2I3WvXM" target="_blank">
+                        <img src="assets/img/u10.png" alt="Zed Bamboo Longboard">
+                    </a>
+                    <h2 class="artikelname">
+                        Zed Bamboo Longboard</h2>
+                    <div class="preis">$60.00</div>
+                    <div class="hersteller">Retrospec</div>
+                </div>
+                <!-- 5. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2KfP3ee" target="_blank">
+                        <img src="assets/img/u9.png" alt="Electric Pour-Over Kettle">
+                    </a>
+                    <h2 class="artikelname">
+                        Electric Pour-Over Kettle</h2>
+                    <div class="preis">$149.00</div>
+                    <div class="hersteller">Fellow</div>
+                </div>
+                <!-- 6. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2FYB3zT" target="_blank">
+                        <img src="assets/img/h17.png" alt="Woodie Vintage Car">
+                    </a>
+                    <h2 class="artikelname">
+                        Woodie Vintage Car</h2>
+                    <div class="preis">$35.00</div>
+                    <div class="hersteller">Candylab Toys</div>
+                </div>
+                <!-- 7. Angebot -->
+                <div class="angebot">
+                    <a href="https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991"
+                        target="_blank">
+                        <img src="assets/img/c3.png" alt="Logo Modernism">
+                    </a>
+                    <h2 class="artikelname">
+                        Logo Modernism</h2>
+                    <div class="preis">$60.00</div>
+                    <div class="hersteller">Taschen</div>
+                </div>
+            </article>
+            <article class="container">
+                <!-- 8. Angebot  Start Container-->
+                <div class="angebot">
+                    <a href="https://amzn.to/2YQLnCV" target="_blank">
+                        <img src="assets/img/d7.png" alt="Dieter Rams: As Little Design as Possible">
+                    </a>
+                    <h2 class="artikelname">
+                        Dieter Rams: As Little Design as Possible</h2>
+                    <div class="preis">$150.00</div>
+                    <div class="hersteller">Sophie Lovell</div>
+                </div>
+                <!-- 9. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2I3lbQ7" target="_blank">
+                        <img src="assets/img/c6.png" alt="The Eye	">
+                    </a>
+                    <h2 class="artikelname">
+                        The Eye </h2>
+                    <div class="preis">$28.00</div>
+                    <div class="hersteller">Nathan Williams</div>
+                </div>
+                <!-- 10. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2IifSvA" target="_blank">
+                        <img src="assets/img/h13.png" alt="Gather Desk Organizer">
+                    </a>
+                    <h2 class="artikelname">Gather Desk Organizer</h2>
+                    <div class="preis">$149.00</div>
+                    <div class="hersteller">Ugmonk</div>
+                </div>
+                <!-- 11. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2G84CiT" target="_blank">
+                        <img src="assets/img/h8.png" alt="Dipped Canteen">
+                    </a>
+                    <h2 class="artikelname">Dipped Canteen</h2>
+                    <div class="preis">$28.00</div>
+                    <div class="hersteller">Corkcicle.</div>
+                </div>
+                <!-- 12. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2YWPz3N" target="_blank">
+                        <img src="assets/img/h2.png" alt="Sayl Office Chair White">
+                    </a>
+                    <h2 class="artikelname">Sayl Office Chair White</h2>
+                    <div class="preis">$599.00</div>
+                    <div class="hersteller">Herman Miller</div>
+                </div>
+                <!-- 13. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2KhwTsz" target="_blank">
+                        <img src="assets/img/d5.png" alt="Three Cherry Wood Notebook">
+                    </a>
+                    <h2 class="artikelname">Three Cherry Wood Notebook</h2>
+                    <div class="preis">$13.00</div>
+                    <div class="hersteller">Field Notes</div>
+                </div>
+                <!-- 14. Angebot -->
+                <div class="angebot">
+                    <a href="https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991" target="_blank">
+                        <img src="assets/img/c5.png" alt="From Japan">
+                    </a>
+                    <h2 class="artikelname">From Japan</h2>
+                    <div class="preis">$16.00</div>
+                    <div class="hersteller">Counter Print</div>
+                </div>
+            </article>
+            <article class="container">
+                <!-- 15. Angebot  Start Container-->
+                <div class="angebot">
+                    <a href="http://www.grupaproducts.com/arigato/" target="_blank">
+                        <img src="assets/img/h6.png" alt="Arigato Desk Lamp">
+                    </a>
+                    <h2 class="artikelname">
+                        Arigato Desk Lamp</h2>
+                    <div class="preis">$380.00</div>
+                    <div class="hersteller">Grupa</div>
+                </div>
+                <!-- 16. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2CZiPxO" target="_blank">
+                        <img src="assets/img/u7.png" alt="Winston Regal Watch">
+                    </a>
+                    <h2 class="artikelname">Winston Regal Watch</h2>
+                    <div class="preis">$58.00</div>
+                    <div class="hersteller">Komono</div>
+                </div>
+                <!-- 17. Angebot -->
+                <div class="angebot">
+                    <a href="https://heyshop.es/collections/home/products/h-hey" target="_blank">
+                        <img src="assets/img/d4.png" alt="Letter H Poster">
+                    </a>
+                    <h2 class="artikelname">Letter H Poster</h2>
+                    <div class="preis">$45.00</div>
+                    <div class="hersteller">Hey Studio</div>
+                </div>
+                <!-- 18. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2UGLHEQ" target="_blank">
+                        <img src="assets/img/u11.png" alt="Coffee Can">
+                    </a>
+                    <h2 class="artikelname">Coffee Can</h2>
+                    <div class="preis">$11.00</div>
+                    <div class="hersteller">Blue Bottle Company</div>
+                </div>
+                <!-- 19. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2UFjEWp" target="_blank">
+                        <img src="assets/img/h9.png" alt="Beoplay H4">
+                    </a>
+                    <h2 class="artikelname">Beoplay H4</h2>
+                    <div class="preis">$160.00</div>
+                    <div class="hersteller">Bang & Olufsen</div>
+                </div>
+                <!-- 20. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2OTHEQg" target="_blank">
+                        <img src="assets/img/p2.png" alt="Make It Now">
+                    </a>
+                    <h2 class="artikelname">Make It Now</h2>
+                    <div class="preis">$22.00</div>
+                    <div class="hersteller">Anthony Burrill</div>
+                </div>
+                <!-- 21. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2UFHfGt" target="_blank">
+                        <img src="assets/img/h4.png" alt="Black Side Chair">
+                    </a>
+                    <h2 class="artikelname">Black Side Chair</h2>
+                    <div class="preis">$54.00</div>
+                    <div class="hersteller">Eames Style</div>
+                </div>
+            </article>
+        </section>
+    </main>
 
-<!--
-Kanken Art Laptop 15" Special Edition Backpack	Fjallraven	$119.00	01.png	https://amzn.to/32MmHgL
-Swing Arm Wood Desk Lamp	Tomons	$36.00	d2.png	https://amzn.to/2WX7vtD
-Hajo Backpack	Ucon Acrobatics	$89.00	u6.png	https://amzn.to/2I3WvXM
-Zed Bamboo Longboard	Retrospec	$60.00	u10.png	https://amzn.to/2YX3043
-Electric Pour-Over Kettle	Fellow	$149.00	u9.png	https://amzn.to/2KfP3ee
-Woodie Vintage Car	Candylab Toys	$35.00	h17.png	https://amzn.to/2FYB3zT
-Logo Modernism	Taschen	$60.00	c3.png	https://www.bookdepository.com/Logo-Modernism-Jens-Muller-R-Roger-Remington/9783836545303/?a_aid=1991
-Dieter Rams: As Little Design as Possible	Sophie Lovell	$150.00	d7.png	https://amzn.to/2YQLnCV
-The Eye	Nathan Williams	$28.00	c6.png	https://amzn.to/2I3lbQ7
-Gather Desk Organizer	Ugmonk	$149.00	h13.png	https://amzn.to/2IifSvA
-Dipped Canteen	Corkcicle.	$28.00	h8.png	https://amzn.to/2G84CiT
-Sayl Office Chair White	Herman Miller	$599.00	h2.png	https://amzn.to/2YWPz3N
-Three Cherry Wood Notebook	Field Notes	$13.00	d5.png	https://amzn.to/2KhwTsz
-From Japan	Counter Print	$16.00	c5.png	https://www.bookdepository.com/From-Japan/9780957081659?a_aid=1991
-Arigato Desk Lamp	Grupa	$380.00	h6.png	http://www.grupaproducts.com/arigato/
-Winston Regal Watch	Komono	$58.00	u7.png	https://amzn.to/2CZiPxO
-Letter H Poster	Hey Studio	$45.00	d4.png	https://heyshop.es/collections/home/products/h-hey
-Coffee Can	Blue Bottle Company	$11.00	u11.png	https://amzn.to/2UGLHEQ
-Beoplay H4	Bang & Olufsen	$160.00	h9.png	https://amzn.to/2UFjEWp
-Make It Now	Anthony Burrill	$22.00	p2.png	https://amzn.to/2OTHEQg
+    <!--
 Black Side Chair	Eames Style	$54.00	h4.png	https://amzn.to/2UFHfGt
 Min: The New Simplicity in Graphic Design	Thames & Hudson	$28.00	c22.png	https://amzn.to/2Ij1IKA
 Grid systems in graphic design	Josef Müller-Brockmann	$42.00	c1.png	https://amzn.to/2UxtLww
@@ -52,3 +251,34 @@ Geo Thermos	Normann Copenhagen	$62.00	home-8.png	https://amzn.to/2JLtxvk
 Womb Chair & Ottoman	Kardiel	$799.00	home-10.png	https://amzn.to/2YdSBPy
 Water Filter Glass Carafe	Soma	$30.00	home-9.png	https://amzn.to/2LCEfGP
 -->
+    <footer>
+        <section class="footergrid">
+            <div class="DS">
+                <h2>The Design Shop</h2>
+                <p>Carefully curated online design stor, founded and designed by <span>Ruby Bacanovic</span>.</p>
+            </div>
+            <div class="kontakt">
+                <h2>Contact</h2>
+                <p><a href:"mailto:">Email us</a></p>
+                <p><a href:"mailto:">Work with us</a></p>
+            </div>
+            <div class="nl">
+                <h2>Newsletter</h2>
+                <p>Click here to <a href="#">subscribe</a>.</p>
+                <p><i>Don't worry. We hate spam too.</i></p>
+            </div>
+            <div class="finden">
+                <h2>Find Us Here</h2>
+                <p><a href="#">Facebook</a></p>
+                <p><a href="#">Instagram</a></p>
+                <p><a href="#">Twitter</a></p>
+            </div>
+        </section>
+        <p class="footprint">&copy;2022 The Design Shop <i class="fas fa-paw"></i> The Design Blog</p>
+    </footer>
+
+
+    <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
