alle Artikel/Bilder

--- a/index.html
+++ b/index.html
@@ -234,23 +234,114 @@
                     <div class="hersteller">Eames Style</div>
                 </div>
             </article>
+            <article class="container">
+                <!-- 22. Angebot  Start Container-->
+                <div class="angebot">
+                    <a href="https://amzn.to/2Ij1IKA" target="_blank">
+                        <img src="assets/img/c22.png" alt="Min: The New Simplicity in Graphic Design">
+                    </a>
+                    <h2 class="artikelname">
+                        Min: The New Simplicity in Graphic Design</h2>
+                    <div class="preis">$28.00</div>
+                    <div class="hersteller">Thames & Hudson</div>
+                </div>
+                <!-- 23. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2UxtLww" target="_blank">
+                        <img src="assets/img/c1.png" alt="Grid systems in graphic design">
+                    </a>
+                    <h2 class="artikelname">Grid systems in graphic design</h2>
+                    <div class="preis">$42.00</div>
+                    <div class="hersteller">Josef Müller-Brockmann</div>
+                </div>
+                <!-- 24. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2I5vxiq" target="_blank">
+                        <img src="assets/img/u12.png" alt="Card Wallet">
+                    </a>
+                    <h2 class="artikelname">Card Wallet</h2>
+                    <div class="preis">$15.00</div>
+                    <div class="hersteller">Herschel</div>
+                </div>
+                <!-- 25. Angebot -->
+                <div class="angebot">
+                    <a href="https://goodfuckingdesignadvice.com/products/classic-advice-print" target="_blank">
+                        <img src="assets/img/p3.png" alt="Classic Advice Print Black">
+                    </a>
+                    <h2 class="artikelname">Classic Advice Print Black</h2>
+                    <div class="preis">$30.00</div>
+                    <div class="hersteller">Good Fucking Design Advice</div>
+                </div>
+                <!-- 26. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2D3yZWX" target="_blank">
+                        <img src="assets/img/life-15.png" alt="Magic Mouse 2">
+                    </a>
+                    <h2 class="artikelname">Magic Mouse 2</h2>
+                    <div class="preis">$92.00</div>
+                    <div class="hersteller">Apple</div>
+                </div>
+                <!-- 27. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2WTbsPL" target="_blank">
+                        <img src="assets/img/life-17.png" alt="Travel Tumbler">
+                    </a>
+                    <h2 class="artikelname">Travel Tumbler</h2>
+                    <div class="preis">$34.00</div>
+                    <div class="hersteller">Kinto</div>
+                </div>
+                <!-- 28. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2GbCf4A" target="_blank">
+                        <img src="assets/img/life-16.png" alt="Magic Keyboard">
+                    </a>
+                    <h2 class="artikelname">Magic Keyboard</h2>
+                    <div class="preis">$34.00</div>
+                    <div class="hersteller">Apple</div>
+                </div>
+            </article>
+            <article class="container">
+                <!-- 29. Angebot  Start Container-->
+                <div class="angebot">
+                    <a href="https://amzn.to/2WMJbdy" target="_blank">
+                        <img src="assets/img/u8.png" alt="Bottle Grinder">
+                    </a>
+                    <h2 class="artikelname">
+                        Bottle Grinder</h2>
+                    <div class="preis">$75.00</div>
+                    <div class="hersteller">Menu</div>
+                </div>
+                <!-- 30. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2JLtxvk" target="_blank">
+                        <img src="assets/img/home-8.png" alt="Geo Thermos Normann">
+                    </a>
+                    <h2 class="artikelname">Geo Thermos Normann</h2>
+                    <div class="preis">$62.00</div>
+                    <div class="hersteller">Normann Copenhagen</div>
+                </div>
+                <!-- 31. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2YdSBPy" target="_blank">
+                        <img src="assets/img/home-10.png" alt="Womb Chair & Ottoman">
+                    </a>
+                    <h2 class="artikelname">Womb Chair & Ottoman</h2>
+                    <div class="preis">$799.00</div>
+                    <div class="hersteller">Kardiel</div>
+                </div>
+                <!-- 31. Angebot -->
+                <div class="angebot">
+                    <a href="https://amzn.to/2LCEfGP" target="_blank">
+                        <img src="assets/img/home-9.png" alt="Water Filter Glass Carafe">
+                    </a>
+                    <h2 class="artikelname">Water Filter Glass Carafe</h2>
+                    <div class="preis">$30.00</div>
+                    <div class="hersteller">Soma</div>
+                </div>
+            </article>
         </section>
     </main>
 
-    <!--
-Black Side Chair	Eames Style	$54.00	h4.png	https://amzn.to/2UFHfGt
-Min: The New Simplicity in Graphic Design	Thames & Hudson	$28.00	c22.png	https://amzn.to/2Ij1IKA
-Grid systems in graphic design	Josef Müller-Brockmann	$42.00	c1.png	https://amzn.to/2UxtLww
-Card Wallet	Herschel	$15.00	u12.png	https://amzn.to/2I5vxiq
-Classic Advice Print Black	Good Fucking Design Advice	$30.00	p3.png	https://goodfuckingdesignadvice.com/products/classic-advice-print
-Magic Mouse 2	Apple	$92.00	life-15.png	https://amzn.to/2D3yZWX
-Travel Tumbler	Kinto	$34.00	life-17.png	https://amzn.to/2WTbsPL
-Magic Keyboard	Apple	$139.00	life-16.png	https://amzn.to/2GbCf4A
-Bottle Grinder	Menu	$75.00	u8.png	https://amzn.to/2WMJbdy
-Geo Thermos	Normann Copenhagen	$62.00	home-8.png	https://amzn.to/2JLtxvk
-Womb Chair & Ottoman	Kardiel	$799.00	home-10.png	https://amzn.to/2YdSBPy
-Water Filter Glass Carafe	Soma	$30.00	home-9.png	https://amzn.to/2LCEfGP
--->
     <footer>
         <section class="footergrid">
             <div class="DS">
