--- a/index-alternativ.html
+++ b/index-alternativ.html
@@ -6,11 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/hamburgermenu.css">
     <title>The Design Shop</title>
 </head>
 
 <body>
+    <header>
+        <a href="#">
+            <h1>The Design Shop</h1>
+        </a>
+        <div class="row">
+            <input type="checkbox" id="hamburg">
+            <label for="hamburg" class="hamburg">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </label>
 
+            <nav class="topmenu">
+                <ul>
+                    <li><a href="#">Weekly Recommendation</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">TDB</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!--     
     <header>
         <a href="#">
             <h1>The Design Shop</h1>
@@ -22,12 +45,14 @@
                 <li><a href="#">TDB</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
-
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <main>
         <section>
             <article class="container">
+
+
                 <!-- 1. Angebot  Start Container-->
                 <div class="angebot">
                     <a href="https://amzn.to/32MmHgL" target="_blank">
@@ -366,7 +391,7 @@
         </section>
         <p class="footprint">&copy;2022 The Design Shop <i class="fas fa-paw"></i> The Design Blog</p>
     </footer>
-
+    -->
 
     <script src="https://kit.fontawesome.com/8c93758a75.js" crossorigin="anonymous"></script>
 </body>
